refactor authors